[gd_scene load_steps=3 format=3 uid="uid://ec0iph0ca5l7"]

[ext_resource type="Texture2D" uid="uid://baebhb6bp2gnj" path="res://icon.svg" id="1_5tuc0"]
[ext_resource type="Script" path="res://SingleStar.gd" id="2_5l1w7"]

[node name="StarNode2D" type="Sprite2D"]
position = Vector2(64, 65)
texture = ExtResource("1_5tuc0")
script = ExtResource("2_5l1w7")
metadata/IndexNum = 0
metadata/StarName = ""

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -63.0
offset_top = -64.0
offset_right = 63.0
offset_bottom = 63.0

[node name="StarInfoLabel" type="Label" parent="."]
offset_left = 67.0
offset_top = -60.0
offset_right = 447.0
offset_bottom = 58.0

[connection signal="focus_entered" from="TextureRect" to="." method="_on_texture_rect_focus_entered"]
[connection signal="focus_exited" from="TextureRect" to="." method="_on_texture_rect_focus_exited"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
